--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.3",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-firebase/app": "^21.4.1",
+    "@react-native-firebase/auth": "^21.4.1",
     "@react-native-firebase/crashlytics": "^21.4.1",
+    "@react-native-firebase/firestore": "^21.4.1",
     "@react-native-firebase/perf": "^21.4.1",
+    "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/native": "*",
     "@react-navigation/stack": "*",
     "expo": "~51.0.28",
@@ -18,7 +22,7 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-animatable": "*",
-    "react-native-calendars": "*",
+    "react-native-calendars": "^1.1307.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "4.9.2",
     "react-native-safe-area-context": "4.10.5",
